Fixed contact form section height bug on small screens

--- a/css/contact.css
+++ b/css/contact.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 90vh;
+  min-height: 90vh;
 }
 
 .contact-form-box {
